# cronet_http_worker

./: README.md  ffigen.yaml  jnigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/unwired/cronet_http_worker/: CronetClient.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/unwired/cronet_http_worker_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: cronet_http_worker.podspec
ios/Classes/: cronet_http_worker.c
lib/: cronet_http_worker.dart  cronet_http_worker_bindings_generated.dart
lib/src/com/unwired/cronet_http_worker/: jni_bindings.dart
linux/: CMakeLists.txt
macos/: cronet_http_worker.podspec
src/: CMakeLists.txt  cronet_http_worker.c
src/cronet_http_worker/: CMakeLists.txt  cronet_http_worker.c
windows/: CMakeLists.txt
